2003-03-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/sninit.tcl (sn_tcl_tk_init): Fix prepend
	of SN bin dir to the PATH env var on startup.
	The previous code used : as the PATH separator
	under Windows which was causing problems with exec.
	The problem manifested itself as a mysterious exec
	error when attempting to build with Cygwin make.
	[Bug 658173]

2003-03-11  Steven Johnson  <sjohnson@neurizon.net>

	* gui/projedit.tcl (add_files_cb): Use a foreach
	loop instead of an array set call since the
	join optimization used in the method broke
	when processing files where the name included
	a space.

2003-03-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/editorpane.tcl (InsertTab, Newline):
	Use string repeat instead of a for loop since
	it is more clear and executes more quickly.
	Re-implement the Newline proc, it was doing
	extra work when it was not needed and creating
	extra variables for no reason. Incorporate
	the translate tabs to spaces patch submitted
	by sjohnson@neurizon.net. [Bug 685173]

2003-02-18  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/fortran/fortran.y: Add patch from
	bug report 658664 to fix error generated by
	bison 1.75.

2003-02-18  Ian Roxborough  <irox@ix.netcom.com>

	* gui/text.tcl (tkTextUndoPop): When they are no
	more undo operations on the undo stack, tell the
	editor to reset the modified status to unmodified.

2003-02-17  Ian Roxborough  <irox@ix.netcom.com>

	* gui/projmng.tcl (sn_select_project): On a
	Double click, don't invoke the open project
	proc until a ButtonRelease event is received.

2003-02-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* INSTALL.TXT: Update install notes to include
	text about broken Cygwin grep and binmode mount
	points. This should be enough to get the 5.1
 	branch building with a newer Cygwin.

2003-02-13  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/multiview.tcl (AddStatusbar): Anchor the
	text used to display the name of the file